compiler-frontend/lexing/tests/snapshots/lexer__char.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "'a'\n\n'\\xFF'\n\n'\\x2603'\n\n'\\n2'\n\n'abc'\n\n'\\''\n\n'\\\\'\n"
expression: snapshot
---
annotation : ""
 qualifier : ""
      kind : CHAR
      text : "'a'"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\xFF'"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\x2603'"
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\n2'"
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'abc'"
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\''"
  position : Position { line: 11, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\\\'"
  position : Position { line: 13, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 14, column: 1 }
     error : None
